[package]
name = "rust_lib"
version = "0.0.0"
authors = ["Kirill Kuzminykh <cykooz@gmail.com>"]
edition = "2021"
rust-version = "1.80.1"


[lib]
name = "rust_lib"
crate-type = ["cdylib"]


[dependencies]
fast_image_resize = { version = "5.1.2", features = ["rayon"] }
rayon = "1.10"
pyo3 = "0.23.4"


[profile.release]
lto = true
opt-level = 3
codegen-units = 1
