[package]
name = "rust_lib"
version = "0.0.0"
authors = ["Kirill Kuzminykh <cykooz@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"


[lib]
name = "rust_lib"
crate-type = ["cdylib"]


[dependencies]
fast_image_resize = { version = "6.0.0", features = ["std", "rayon"] }
rayon = "1.11"
pyo3 = "0.28.0"


[profile.release]
lto = true
opt-level = 3
codegen-units = 1
