[package]
name = "rust_lib"
version = "0.0.0"
authors = ["Kirill Kuzminykh <cykooz@gmail.com>"]
edition = "2024"
rust-version = "1.87.0"


[lib]
name = "rust_lib"
crate-type = ["cdylib"]


[dependencies]
fast_image_resize = { version = "6.1.0", features = ["std", "rayon"] }
rayon = "1.12"
pyo3 = "0.29.0"


[profile.release]
lto = true
opt-level = 3
codegen-units = 1
