[build-system]
requires = ["maturin>=1.4.0"]
build-backend = "maturin"


[project]
name = "cykooz.resizer"
version = "2.2.0"
description = "A fast image resizer"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
]
keywords = ["image", "resize", "simd"]
requires-python = ">=3.7"
url = "https://github.com/Cykooz/cykooz.resizer"


[project.optional-dependencies]
dev = [
    "wheel",
    "maturin[zig,patchelf]",
    "pytest",
    'pytest-benchmark',
    "Pillow",
    'tabulate',
]
pillow = [
    "Pillow",
]


[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "cykooz.resizer.rust_lib"
strip = true


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
